Change file location

--- a/ds_LokeshMeshram/Notebook1.ipynb
+++ b/ds_LokeshMeshram/Notebook1.ipynb
@@ -24,39 +24,17 @@
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: gdown in c:\\users\\lokesh\\downloads\\ds_lokeshmeshram\\content\\ds_lokeshmeshram\\.venv\\lib\\site-packages (5.2.0)\n",
-            "Requirement already satisfied: beautifulsoup4 in c:\\users\\lokesh\\downloads\\ds_lokeshmeshram\\content\\ds_lokeshmeshram\\.venv\\lib\\site-packages (from gdown) (4.14.2)\n",
-            "Requirement already satisfied: filelock in c:\\users\\lokesh\\downloads\\ds_lokeshmeshram\\content\\ds_lokeshmeshram\\.venv\\lib\\site-packages (from gdown) (3.20.0)\n",
-            "Requirement already satisfied: requests[socks] in c:\\users\\lokesh\\downloads\\ds_lokeshmeshram\\content\\ds_lokeshmeshram\\.venv\\lib\\site-packages (from gdown) (2.32.5)\n",
-            "Requirement already satisfied: tqdm in c:\\users\\lokesh\\downloads\\ds_lokeshmeshram\\content\\ds_lokeshmeshram\\.venv\\lib\\site-packages (from gdown) (4.66.4)\n",
-            "Requirement already satisfied: soupsieve>1.2 in c:\\users\\lokesh\\downloads\\ds_lokeshmeshram\\content\\ds_lokeshmeshram\\.venv\\lib\\site-packages (from beautifulsoup4->gdown) (2.8)\n",
-            "Requirement already satisfied: typing-extensions>=4.0.0 in c:\\users\\lokesh\\downloads\\ds_lokeshmeshram\\content\\ds_lokeshmeshram\\.venv\\lib\\site-packages (from beautifulsoup4->gdown) (4.15.0)\n",
-            "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\lokesh\\downloads\\ds_lokeshmeshram\\content\\ds_lokeshmeshram\\.venv\\lib\\site-packages (from requests[socks]->gdown) (3.4.4)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\lokesh\\downloads\\ds_lokeshmeshram\\content\\ds_lokeshmeshram\\.venv\\lib\\site-packages (from requests[socks]->gdown) (3.11)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\lokesh\\downloads\\ds_lokeshmeshram\\content\\ds_lokeshmeshram\\.venv\\lib\\site-packages (from requests[socks]->gdown) (2.5.0)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\lokesh\\downloads\\ds_lokeshmeshram\\content\\ds_lokeshmeshram\\.venv\\lib\\site-packages (from requests[socks]->gdown) (2025.10.5)\n",
-            "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6 in c:\\users\\lokesh\\downloads\\ds_lokeshmeshram\\content\\ds_lokeshmeshram\\.venv\\lib\\site-packages (from requests[socks]->gdown) (1.7.1)\n",
-            "Requirement already satisfied: colorama in c:\\users\\lokesh\\downloads\\ds_lokeshmeshram\\content\\ds_lokeshmeshram\\.venv\\lib\\site-packages (from tqdm->gdown) (0.4.6)\n"
-          ]
-        },
-        {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "\n",
-            "[notice] A new release of pip is available: 24.2 -> 25.2\n",
-            "[notice] To update, run: python.exe -m pip install --upgrade pip\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1PgQC0tO8XN-wqkNyghWc_-mnrYv_nhSf\n",
-            "To: c:\\Users\\Lokesh\\Downloads\\ds_LokeshMeshram\\content\\ds_LokeshMeshram\\csv_files\\fear_greed.csv\n",
-            "100%|██████████| 90.8k/90.8k [00:00<00:00, 681kB/s]\n",
+            "To: c:\\Users\\Lokesh\\Downloads\\ds_LokeshMeshram\\content\\Project\\csv_files\\fear_greed.csv\n",
+            "100%|██████████| 90.8k/90.8k [00:00<00:00, 113kB/s]\n",
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1IAfLZwu6rJzyWKgBToqwSmmVYU6VbjVs\n",
-            "To: c:\\Users\\Lokesh\\Downloads\\ds_LokeshMeshram\\content\\ds_LokeshMeshram\\csv_files\\trader_data.csv\n",
-            "100%|██████████| 47.5M/47.5M [00:12<00:00, 3.91MB/s]\n"
+            "To: c:\\Users\\Lokesh\\Downloads\\ds_LokeshMeshram\\content\\Project\\csv_files\\trader_data.csv\n",
+            "100%|██████████| 47.5M/47.5M [00:10<00:00, 4.52MB/s]\n"
           ]
         },
         {
@@ -87,12 +65,12 @@
         "\n",
         "# Bitcoin Market Sentiment Dataset\n",
         "gdown.download(\"https://drive.google.com/uc?id=1PgQC0tO8XN-wqkNyghWc_-mnrYv_nhSf\",\n",
-        "               \"csv_files/fear_greed.csv\",\n",
+        "               \"csv_files/fear_greed.csv\", # Update the path as per your file's location\n",
         "               quiet=False)\n",
         "\n",
         "# Historical Trader Data\n",
         "gdown.download(\"https://drive.google.com/uc?id=1IAfLZwu6rJzyWKgBToqwSmmVYU6VbjVs\",\n",
-        "               \"csv_files/trader_data.csv\",\n",
+        "               \"csv_files/trader_data.csv\", # Update the path as per your file's location\n",
         "               quiet=False)"
       ]
     },
@@ -109,20 +87,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "cf22be02"
       },
       "outputs": [],
       "source": [
         "# Load the datasets\n",
-        "market_sentiment = pd.read_csv(\"csv_files/fear_greed.csv\")\n",
-        "trader_data = pd.read_csv(\"csv_files/trader_data.csv\")"
+        "market_sentiment = pd.read_csv(\"csv_files/fear_greed.csv\") # Update the path as per your file's location\n",
+        "trader_data = pd.read_csv(\"csv_files/trader_data.csv\") # Update the path as per your file's location"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -242,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -483,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -526,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -555,13 +533,13 @@
         "plt.xlabel('Date')\n",
         "plt.ylabel('Sentiment Value')\n",
         "plt.grid(True)\n",
-        "plt.savefig('outputs/sentiment_value_over_time.png')\n",
+        "plt.savefig('outputs/sentiment_value_over_time.png') # Update the path as per your file's location\n",
         "plt.show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -591,13 +569,13 @@
         "plt.ylabel('Count')\n",
         "plt.xticks(rotation=45, ha='right')\n",
         "plt.tight_layout()\n",
-        "plt.savefig('outputs/sentiment_classification_distribution.png')\n",
+        "plt.savefig('outputs/sentiment_classification_distribution.png') # Update the path as per your file's location\n",
         "plt.show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -630,7 +608,7 @@
         "plt.ylabel('Average Value')\n",
         "plt.xticks(rotation=45, ha='right')\n",
         "plt.tight_layout()\n",
-        "plt.savefig('outputs/average_sentiment_by_classification.png')\n",
+        "plt.savefig('outputs/average_sentiment_by_classification.png') # Update the path as per your file's location\n",
         "plt.show()"
       ]
     },
@@ -647,7 +625,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -777,7 +755,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -815,13 +793,13 @@
         "plt.ylabel('Count')\n",
         "\n",
         "plt.tight_layout()\n",
-        "plt.savefig('outputs/trading_side_direction_distribution.png')\n",
+        "plt.savefig('outputs/trading_side_direction_distribution.png') # Update the path as per your file's location\n",
         "plt.show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -849,13 +827,13 @@
         "plt.title('Distribution of Closed PnL')\n",
         "plt.xlabel('Closed PnL')\n",
         "plt.ylabel('Frequency')\n",
-        "plt.savefig('outputs/closed_pnl_distribution.png')\n",
+        "plt.savefig('outputs/closed_pnl_distribution.png')  # Update the path as per your file's location\n",
         "plt.show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1164,7 +1142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1450,7 +1428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 15,
       "metadata": {
         "id": "uC7rqB2f0c0M"
       },
@@ -1469,7 +1447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1498,13 +1476,13 @@
         "plt.xlabel('Date')\n",
         "plt.ylabel('Total Size USD')\n",
         "plt.grid(True)\n",
-        "plt.savefig('outputs/total_trading_volume_over_time.png')\n",
+        "plt.savefig('outputs/total_trading_volume_over_time.png') # Update the path as per your file's location\n",
         "plt.show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1533,7 +1511,7 @@
         "plt.xlabel('Date')\n",
         "plt.ylabel('Number of Trades')\n",
         "plt.grid(True)\n",
-        "plt.savefig('outputs/number_of_trades_over_time.png')\n",
+        "plt.savefig('outputs/number_of_trades_over_time.png') # Update the path as per you file's location\n",
         "plt.show()"
       ]
     },
@@ -1550,7 +1528,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1688,7 +1666,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1776,7 +1754,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1802,13 +1780,13 @@
         "plt.figure(figsize=(8, 6))\n",
         "sns.heatmap(correlation_matrix, annot=True, cmap='coolwarm', fmt=\".2f\")\n",
         "plt.title('Correlation Matrix of Sentiment Value, Total Size USD, and Number of Trades')\n",
-        "plt.savefig('outputs/correlation_heatmap.png')\n",
+        "plt.savefig('outputs/correlation_heatmap.png') # Update the path as per you file's location\n",
         "plt.show()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1837,13 +1815,13 @@
         "plt.xlabel('Sentiment Value')\n",
         "plt.ylabel('Total Size USD')\n",
         "plt.grid(True)\n",
-        "plt.savefig('outputs/sentiment_vs_volume_scatterplot.png')\n",
+        "plt.savefig('outputs/sentiment_vs_volume_scatterplot.png') # Update the path as per you file's location\n",
         "plt.show()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1872,13 +1850,13 @@
         "plt.xlabel('Sentiment Value')\n",
         "plt.ylabel('Number of Trades')\n",
         "plt.grid(True)\n",
-        "plt.savefig('outputs/sentiment_vs_trades_scatterplot.png')\n",
+        "plt.savefig('outputs/sentiment_vs_trades_scatterplot.png') # Update the path as per you file's location\n",
         "plt.show()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1908,13 +1886,13 @@
         "plt.ylabel('Total Size USD')\n",
         "plt.xticks(rotation=45, ha='right')\n",
         "plt.tight_layout()\n",
-        "plt.savefig('outputs/volume_by_sentiment_boxplot.png')\n",
+        "plt.savefig('outputs/volume_by_sentiment_boxplot.png') # Update the path as per you file's location\n",
         "plt.show()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1943,7 +1921,7 @@
         "plt.ylabel('Number of Trades')\n",
         "plt.xticks(rotation=45, ha='right')\n",
         "plt.tight_layout()\n",
-        "plt.savefig('outputs/trades_by_sentiment_boxplot.png')\n",
+        "plt.savefig('outputs/trades_by_sentiment_boxplot.png') # Update the path as per you file's location\n",
         "plt.show()"
       ]
     },
